--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -65,7 +65,8 @@ jobs:
           pr_number="${{ github.event.pull_request.number }}"
           owner="${{ github.repository_owner }}"
           repo="${{ github.repository }}"
-          curl -X POST \
+          response=$(curl -X POST -v \
             -H "Authorization: Bearer $GITHUB_TOKEN" \
             -H "Accept: application/vnd.github.v3+json" \
-            "https://api.github.com/repos/$owner/$repo/issues/$pr_number/lock"
+            "https://api.github.com/repos/$owner/$repo/issues/$pr_number/lock" 2>&1)
+          echo "$response"
